# sedna-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/: quickstart.rs
src/: binaries.rs  client.rs  config.rs  error.rs  ffi.rs  lib.rs  server.rs
tests/: integration.rs
